fixed overflow issue

--- a/styles/queries.css
+++ b/styles/queries.css
@@ -4,6 +4,8 @@
   /* } */
   .desktop-div {
     position: relative;
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
   .hero {
     margin-bottom: 16%;
