--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
   margin: 0;
   padding: 0;
 }
+
 :root {
   --footer-color: #13183f;
   --background-color: #ffffff;
@@ -36,9 +37,9 @@ body {
 /* picture{
   margin:auto;
 } */
-picture {
+/* picture {
   /* border: 1px solid black; */
-}
+
 img {
   inline-size: 100%;
   block-size: 100%;
@@ -47,7 +48,7 @@ img {
   /* border-radius: 14px 14px 0 0; */
 }
 p {
-  font-size: clamp(1rem, 0.75rem + 1.5vw, 2rem);
+  font-size: clamp(1rem, 0.75rem + 1.5vw, 4rem);
   line-height: 1.625;
 }
 .btn {
@@ -69,10 +70,10 @@ p {
   align-items: center;
 }
 .company-icon {
-  width: 5rem;
+  width: clamp(5rem, 5rem + 1vw, 10rem);
 }
 h2 {
-  font-size: clamp(1.5rem, 1.5rem + 0.5vw, 3rem);
+  font-size: clamp(1.5rem, 1.5rem + 0.5vw, 6rem);
   line-height: 1.33;
 }
 
@@ -88,7 +89,7 @@ h2 {
 .main-header {
   color: #13183f;
   font-size: 2.5rem;
-  font-size: clamp(2.5rem, 2.5rem + 0.5vw, 4rem);
+  font-size: clamp(2.5rem, 2.5rem + 0.5vw, 5rem);
 }
 .pink {
   align-self: flex-start;
@@ -166,7 +167,7 @@ h2 {
   border-radius: 30px;
   height: 100%;
 }
-/* why does this suddenly need a z-index?? */
+/* why does .dark suddenly need a z-index?? */
 .dark::after {
   display: flex;
   align-items: center;
